force-app/main/default/objects/PersonSales__x/PersonSales__x.object-meta.xml
<CustomObject>
    <description>PersonSales</description>
    <externalDataSource>xDM</externalDataSource>
    <externalName>PersonSales</externalName>
    <label>PersonSales</label>
    <pluralLabel>PersonSales</pluralLabel>
</CustomObject>