force-app/main/default/objects/PersonSales__x/fields/item__c.field-meta.xml
<CustomField>
    <fullName>item__c</fullName>
    <description>item</description>
    <externalDeveloperName>item</externalDeveloperName>
    <label>item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>