force-app/main/default/objects/PersonSales__x/fields/netSalesAmount__c.field-meta.xml
<CustomField>
    <fullName>netSalesAmount__c</fullName>
    <description>netSalesAmount</description>
    <externalDeveloperName>netSalesAmount</externalDeveloperName>
    <label>netSalesAmount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>