force-app/main/default/objects/PersonSales__x/fields/storeNumber__c.field-meta.xml
<CustomField>
    <fullName>storeNumber__c</fullName>
    <description>storeNumber</description>
    <externalDeveloperName>storeNumber</externalDeveloperName>
    <label>storeNumber</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>