force-app/main/default/objects/PersonSales__x/fields/style__c.field-meta.xml
<CustomField>
    <fullName>style__c</fullName>
    <description>style</description>
    <externalDeveloperName>style</externalDeveloperName>
    <label>style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>