force-app/main/default/objects/PersonSales__x/fields/xactDate__c.field-meta.xml
<CustomField>
    <fullName>xactDate__c</fullName>
    <description>xactDate</description>
    <externalDeveloperName>xactDate</externalDeveloperName>
    <label>xactDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>